objects/EPA_Order__c.object
<CustomObject>
    <fields>
        <fullName>Allowance_Holder__c</fullName>
        <description>Used by the DCR app for sharing rules.</description>
        <label>Allowance Holder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>56 - OTAQ</fullName>
                </value>
                <value>
                    <fullName>58 - OAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Order_COR_Name__c</fullName>
        <description>Alt Order COR text name from lookup to contacts.</description>
        <formula>Alt_Order_COR__r.LastName &amp; ", " &amp;  Alt_Order_COR__r.FirstName</formula>
        <label>Alt Order COR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Order_COR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate order or work assignment COR.</description>
        <inlineHelpText>Please enter the alternate order or work assignment COR.</inlineHelpText>
        <label>Alt. Order COR</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Alt_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Number_No_Dashes__c</fullName>
        <description>Lookup of the contract number.</description>
        <formula>IF( RecordType.DeveloperName="DCR_Order_Period", Master_Order__r.Contract_Vehicle2__r.Contract_Grant_IA_Number__c,  Contract_Vehicle2__r.Contract_Grant_IA_Number__c )</formula>
        <inlineHelpText>Lookup to the text contract number (no dashes) field.</inlineHelpText>
        <label>Contract Number (No Dashes)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Vehicle2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract vehicle to which the order belongs.</description>
        <label>Contract Vehicle</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>DCR EPA Orders</relationshipLabel>
        <relationshipName>DCR_EPA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Vendor__c</fullName>
        <description>Vendor from the EPA Agreement Object</description>
        <formula>IF( RecordType.DeveloperName="DCR_Order_Period",  
			Master_Order__r.Contract_Vehicle2__r.Vendor_Name__c &amp; Master_Order__r.Contract_Vehicle2__r.Master_Contract_Vendor__c 
			    , Contract_Vehicle2__r.Vendor_Name__c &amp;  Contract_Vehicle2__r.Master_Contract_Vendor__c)</formula>
        <label>Contract Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <description>** Automatically Calculated ** SUM related line item total amounts.</description>
        <label>Line Item Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Order_Alt_COR__c</fullName>
        <formula>Master_Order__r.Alt_Order_COR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Alt. COR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_COR__c</fullName>
        <formula>Master_Order__r.Order_COR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order COR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Ceiling__c</fullName>
        <inlineHelpText>Maximum potential order amount</inlineHelpText>
        <label>Master Order Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the master order record for cases when a TO has multiple periods of performance</inlineHelpText>
        <label>Master Order</label>
        <referenceTo>EPA_Order__c</referenceTo>
        <relationshipLabel>Order Periods</relationshipLabel>
        <relationshipName>EPA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_COR_Name__c</fullName>
        <description>Order COR text name from contacts lookup.</description>
        <formula>Order_COR__r.LastName &amp; ", " &amp;  Order_COR__r.FirstName</formula>
        <label>Order COR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_COR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order or work assignment COR.</description>
        <inlineHelpText>Please enter the order or work assignment COR.</inlineHelpText>
        <label>Order COR</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Orders_COR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Ceiling__c</fullName>
        <description>Order or work assignment ceiling.</description>
        <inlineHelpText>Please enter the order or work assignment ceiling.</inlineHelpText>
        <label>Order Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Description__c</fullName>
        <description>Description for the order.</description>
        <inlineHelpText>Description for the order.</inlineHelpText>
        <label>Order Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order_Number_Calc__c</fullName>
        <formula>Order_Number_No_Dashes__c &amp; IF(ISBLANK(TEXT(Period__c)), "",  Master_Order__r.Order_Number_No_Dashes__c  &amp; "-" &amp;TEXT(Period__c))</formula>
        <inlineHelpText>Calculated Order Number. If the Order record is for an Order Period, the number will have the Period appended to the Order Number.</inlineHelpText>
        <label>Order Number (Calc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number_No_Dashes__c</fullName>
        <description>Order or work assignment number under a contract.</description>
        <inlineHelpText>Please enter the order or work assignment number under a contract.</inlineHelpText>
        <label>Order Number (No Dashes)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Period_Ceiling__c</fullName>
        <inlineHelpText>Ceiling amount for the order period, not the max potential order ceiling.</inlineHelpText>
        <label>Order Period Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the order period (not the max period performance end date)</inlineHelpText>
        <label>Order Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Period_Start_Date__c</fullName>
        <inlineHelpText>Start date of the order period</inlineHelpText>
        <label>Order Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Title__c</fullName>
        <description>Title of the contract order.</description>
        <inlineHelpText>Please enter the order or work assignment title.</inlineHelpText>
        <label>Order Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Funding__c</fullName>
        <description>Used to capture outside funding on an order.</description>
        <inlineHelpText>Used to capture outside funding on an order.</inlineHelpText>
        <label>Outside Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PR_Number__c</fullName>
        <description>Purchase Request number for the order.</description>
        <inlineHelpText>Please enter the PR Number from the source system.</inlineHelpText>
        <label>PR Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perf_Per_End_Date__c</fullName>
        <description>Performance period end date for the order.</description>
        <inlineHelpText>Performance period end date for the order.</inlineHelpText>
        <label>Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perf_Per_Start_Date__c</fullName>
        <description>Performance period start date for the order.</description>
        <inlineHelpText>Performance period start date for the order.</inlineHelpText>
        <label>Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>Funding or option period of the contract that the order falls under. Base period being 0.</description>
        <inlineHelpText>Please enter the funding/option period of the contract that the order falls under.</inlineHelpText>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Days_in_Order_Period__c</fullName>
        <formula>Order_Period_End_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Days in Order Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Order_Ceiling__c</fullName>
        <formula>Order_Ceiling__c - Line_Item_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Order Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Order_Period_Ceiling__c</fullName>
        <formula>Order_Period_Ceiling__c -  Line_Item_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Order Period Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Information on task orders, delivery orders, work assignments, BPA calls, etc. on contract vehicles. (Not to be confused with the standard object Orders, which is reserved for specific Salesforce CRM licenses)</description>
    <label>EPA Order</label>
    <nameField>
        <displayFormat>EPA-Order-{000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPA Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>DCR_OAP_Orders</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Holder__c</columns>
        <columns>Order_Number_Calc__c</columns>
        <columns>Contract_Number_No_Dashes__c</columns>
        <columns>Perf_Per_Start_Date__c</columns>
        <columns>Perf_Per_End_Date__c</columns>
        <columns>Order_Ceiling__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Order__c.DCR_Order,EPA_Order__c.DCR_Order_Period</value>
        </filters>
        <filters>
            <field>Allowance_Holder__c</field>
            <operation>equals</operation>
            <value>58 - OAP</value>
        </filters>
        <label>DCR: OAP Orders</label>
    </listViews>
    <listViews>
        <fullName>DCR_Orders</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Holder__c</columns>
        <columns>Order_Number_No_Dashes__c</columns>
        <columns>Contract_Number_No_Dashes__c</columns>
        <columns>Perf_Per_Start_Date__c</columns>
        <columns>Perf_Per_End_Date__c</columns>
        <columns>Order_Ceiling__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Order__c.DCR_Order</value>
        </filters>
        <filters>
            <field>Allowance_Holder__c</field>
            <operation>equals</operation>
            <value>56 - OTAQ</value>
        </filters>
        <label>DCR: OTAQ Orders</label>
    </listViews>
    <recordTypes>
        <fullName>DCR_Order</fullName>
        <active>true</active>
        <label>DCR Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_Order_Period</fullName>
        <active>true</active>
        <description>Record type used to distinguish periods within Task Orders</description>
        <label>DCR Order Period</label>
    </recordTypes>
</CustomObject>